<resources>
    <string name="app_name">App1</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="team1">Team A</string>
    <string name="team2">Team B</string>
    <string name="button1">+3 points</string>
    <string name="button2">+2 points</string>
    <string name="button3">FREE THROW</string>
    <string name="button4">+3 points</string>
    <string name="button5">+2 points</string>
    <string name="button6">FREE THROW</string>
    <string name="reset">reset</string>
    <string name="grade">0</string>
    <string name="grade2">0</string>
    <string name="config">CONFIG</string>
    <string name="dol">dollar</string>
    <string name="eur">europea</string>
    <string name="jap">japan</string>
    <string name="hk">hongkong</string>
    <string name="save">SAVE</string>
    <string name="settings">settings</string>
    <string name="about">about</string>
    <string name="name">null</string>
    <string name="result">0.0</string>


</resources>
