<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <EditText
        android:id="@+id/hk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hk"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/jap"
        app:layout_constraintStart_toStartOf="@+id/jap"
        app:layout_constraintTop_toBottomOf="@+id/jap" />

    <EditText
        android:id="@+id/jap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/jap"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/eur"
        app:layout_constraintStart_toStartOf="@+id/eur"
        app:layout_constraintTop_toBottomOf="@+id/eur" />

    <EditText
        android:id="@+id/dol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/dol"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/eur"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/dol"
        app:layout_constraintStart_toStartOf="@+id/dol"
        app:layout_constraintTop_toBottomOf="@+id/dol" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="save"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/hk"
        app:layout_constraintStart_toStartOf="@+id/hk"
        app:layout_constraintTop_toBottomOf="@+id/hk" />
</androidx.constraintlayout.widget.ConstraintLayout>